--- a/Dieukhoan.html
+++ b/Dieukhoan.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Điều Khoản</title>
-    <link rel="stylesheet" type="text/css" href="/Script/CSS/Gioithieu.css">
+    <link rel="stylesheet" type="text/css" href="Gioithieu.css">
 </head>
 <body>
     <!--header-->
     <header>
         <div id="logo">
-            <a href="/index.html">
+            <a href="index.html">
                 <img src="/Images/logo.png" alt="Logo">
             </a>
         </div>
@@ -21,10 +21,10 @@
             </button>
         </div>
         <div class="icons">
-            <div><img src="/Images/shopping.png"><br><a href="./Giohang.html">Giỏ Hàng</a></div>
-            <div><img src="/Images/email_2099199.png"><br><a href="./Gopy.html">Góp ý</a></div>
-            <div><img src="/Images/human.png"><br><a href="./Dangnhap.html">Tài Khoản</a></div>
-            <div><img src="/Images/bell.png"><br><a href="./Thongbao.html">Thông Báo</a></div>
+            <div><img src="/Images/shopping.png"><br><a href="Giohang.html">Giỏ Hàng</a></div>
+            <div><img src="/Images/email_2099199.png"><br><a href="Gopy.html">Góp ý</a></div>
+            <div><img src="/Images/human.png"><br><a href="Dangnhap.html">Tài Khoản</a></div>
+            <div><img src="/Images/bell.png"><br><a href="Thongbao.html">Thông Báo</a></div>
         </div>
     </header>
     <!--nav-->
@@ -52,7 +52,7 @@
             </ul>
         </div>
         <div class="map">
-            <div><img src="/Images/map.png"><br><a href="./Diadiem.html">Hệ Thống Cửa Hàng</a></div>
+            <div><img src="/Images/map.png"><br><a href="Diadiem.html">Hệ Thống Cửa Hàng</a></div>
         </div>
         
     </nav>
@@ -84,16 +84,16 @@
     <div class="footer">
         <div>
             <h4>Dịch Vụ</h4>
-            <p><a href="./Gioithieu.html">Giới thiệu</a></p>
-            <p><a href="./Dieukhoan.html">Điều khoản sử dụng</a></p>
+            <p><a href="Gioithieu.html">Giới thiệu</a></p>
+            <p><a href="Dieukhoan.html">Điều khoản sử dụng</a></p>
         </div>
         <div>
             <h4>Chính Sách</h4>
-            <p><a href="./Doitra.html">Chính sách đổi - trả - hoàn tiền</a></p>
+            <p><a href="Doitra.html">Chính sách đổi - trả - hoàn tiền</a></p>
         </div>
         <div>
             <h4>Thông Tin</h4>
-            <p><a href="./Diadiem.html">Tra cứu địa chỉ</a></p>
+            <p><a href="Diadiem.html">Tra cứu địa chỉ</a></p>
         </div>
         <div class="social">
             <h4>Kết Nối Với Chúng Tôi</h4>
