--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang Chủ</title>
-    <link rel="stylesheet" type="text/css" href="/Script/CSS/styles.css">
-    <link rel="stylesheet" type="text/css" href="/Script/CSS/slider.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="slider.css">
 </head>
 <body>
     <!--header-->
@@ -22,10 +22,10 @@
             </button>
         </div>
         <div class="icons">
-            <div><img src="/Images/shopping.png"><br><a href="/Script/HTML/Giohang.html">Giỏ Hàng</a></div>
-            <div><img src="/Images/email_2099199.png"><br><a href="/Script/HTML/Gopy.html">Góp ý</a></div>
-            <div><img src="/Images/human.png"><br><a href="/Script/HTML/Dangnhap.html">Tài Khoản</a></div>
-            <div><img src="/Images/bell.png"><br><a href="/Script/HTML/Thongbao.html">Thông Báo</a></div>
+            <div><img src="/Images/shopping.png"><br><a href="Giohang.html">Giỏ Hàng</a></div>
+            <div><img src="/Images/email_2099199.png"><br><a href="Gopy.html">Góp ý</a></div>
+            <div><img src="/Images/human.png"><br><a href="Dangnhap.html">Tài Khoản</a></div>
+            <div><img src="/Images/bell.png"><br><a href="Thongbao.html">Thông Báo</a></div>
         </div>
     </header>
     <!--nav-->
@@ -53,7 +53,7 @@
             </ul>
         </div>
         <div class="map">
-            <div><img src="/Images/map.png"><br><a href="./Diadiem.html">Hệ Thống Cửa Hàng</a></div>
+            <div><img src="/Images/map.png"><br><a href="Diadiem.html">Hệ Thống Cửa Hàng</a></div>
         </div>
         
     </nav>
@@ -235,47 +235,47 @@
                 <p>Sách mới</p>
                 <div class="sach">
                     <img class="hinhsach" src="/Images/pic1.png">
-                    <p class="tensach"><a href="/Script/HTML/Chitietsach.html">Tuyển Tập Thơ Của Lưu Quang Vũ</a></p>
+                    <p class="tensach"><a href="Chitietsach.html">Tuyển Tập Thơ Của Lưu Quang Vũ</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
                     <img class="hinhsach" src="/Images/pic12.png">
-                    <p class="tensach"><a href="/Script/HTML/Chitietsach.html">Khám Phá Cố Đô Huế </a></p>
+                    <p class="tensach"><a href="Chitietsach.html">Khám Phá Cố Đô Huế </a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
                     <img class="hinhsach" src="/Images/pic13.png">
-                    <p class="tensach"><a href="/Script/HTML/Chitietsach.html">Kiến Trúc Hiện Đại </a></p>
+                    <p class="tensach"><a href="Chitietsach.html">Kiến Trúc Hiện Đại </a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
                     <img class="hinhsach" src="/Images/pic14.png">
-                    <p class="tensach"><a href="/Script/HTML/Chitietsach.html">Nhật Ký Thức Ăn</a></p>
+                    <p class="tensach"><a href="Chitietsach.html">Nhật Ký Thức Ăn</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
                     <img class="hinhsach" src="/Images/pic15.png">
-                    <p class="tensach"><a href="/Script/HTML/Chitietsach.html">Hãy Nhớ Tên Anh Ấy</a></p>
+                    <p class="tensach"><a href="Chitietsach.html">Hãy Nhớ Tên Anh Ấy</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
                     <img class="hinhsach" src="/Images/pic16.png">
-                    <p class="tensach"><a href="/Script/HTML/Chitietsach.html">Truyện Ngụ Ngôn</a></p>
+                    <p class="tensach"><a href="Chitietsach.html">Truyện Ngụ Ngôn</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
                     <img class="hinhsach" src="/Images/pic17.png">
-                    <p class="tensach"><a href="/Script/HTML/Chitietsach.html">Nguyễn Công Hoan</a></p>
+                    <p class="tensach"><a href="Chitietsach.html">Nguyễn Công Hoan</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
                     <img class="hinhsach" src="/Images/pic18.png">
-                    <p class="tensach"><a href="/Script/HTML/Chitietsach.html">Lương Tướng</a></p>
+                    <p class="tensach"><a href="Chitietsach.html">Lương Tướng</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
                     <img class="hinhsach" src="/Images/pic20.png">
-                    <p class="tensach"><a href="/Script/HTML/Chitietsach.html">Nhật Ký Mẹ Chồng</a></p>
+                    <p class="tensach"><a href="Chitietsach.html">Nhật Ký Mẹ Chồng</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
             </section> 
@@ -319,16 +319,16 @@
     <div class="footer">
         <div>
             <h4>Dịch Vụ</h4>
-            <p><a href="/Script/HTML/Gioithieu.html">Giới thiệu</a></p>
-            <p><a href="/Script/HTML/Dieukhoan.html">Điều khoản sử dụng</a></p>
+            <p><a href="Gioithieu.html">Giới thiệu</a></p>
+            <p><a href="Dieukhoan.html">Điều khoản sử dụng</a></p>
         </div>
         <div>
             <h4>Chính Sách</h4>
-            <p><a href="/Script/HTML/Doitra.html">Chính sách đổi - trả - hoàn tiền</a></p>
+            <p><a href="Doitra.html">Chính sách đổi - trả - hoàn tiền</a></p>
         </div>
         <div>
             <h4>Thông Tin</h4>
-            <p><a href="/Script/HTML/Diadiem.html">Tra cứu địa chỉ</a></p>
+            <p><a href="Diadiem.html">Tra cứu địa chỉ</a></p>
         </div>
         <div class="social">
             <h4>Kết Nối Với Chúng Tôi</h4>
@@ -338,6 +338,6 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="/Script/JS/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
