--- a/Gopy.html
+++ b/Gopy.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Nhập</title>
-    <link rel="stylesheet" type="text/css" href="/Script/CSS/Dangnhap.css">
+    <title>Góp Ý</title>
+    <link rel="stylesheet" type="text/css" href="Dangnhap.css">
 </head>
 <body>
     <!--header-->
     <header>
         <div id="logo">
-            <a href="/index.html">
+            <a href="index.html">
                 <img src="/Images/logo.png" alt="Logo">
             </a>
         </div>
@@ -21,10 +21,10 @@
             </button>
         </div>
         <div class="icons">
-            <div><img src="/Images/shopping.png"><br><a href="./Giohang.html">Giỏ Hàng</a></div>
-            <div><img src="/Images/email_2099199.png"><br><a href="./Gopy.html">Góp ý</a></div>
-            <div><img src="/Images/human.png"><br><a href="./Dangnhap.html">Tài Khoản</a></div>
-            <div><img src="/Images/bell.png"><br><a href="./Thongbao.html">Thông Báo</a></div>
+            <div><img src="/Images/shopping.png"><br><a href="Giohang.html">Giỏ Hàng</a></div>
+            <div><img src="/Images/email_2099199.png"><br><a href="Gopy.html">Góp ý</a></div>
+            <div><img src="/Images/human.png"><br><a href="Dangnhap.html">Tài Khoản</a></div>
+            <div><img src="/Images/bell.png"><br><a href="Thongbao.html">Thông Báo</a></div>
         </div>
     </header>
     <!--nav-->
@@ -52,26 +52,31 @@
             </ul>
         </div>
         <div class="map">
-            <div><img src="/Images/map.png"><br><a href="./Diadiem.html">Hệ Thống Cửa Hàng</a></div>
+            <div><img src="/Images/map.png"><br><a href="Diadiem.html">Hệ Thống Cửa Hàng</a></div>
         </div>
         
     </nav>
     <!--body-->
     <div class="content">
-        <div class="form-container">
+        <div class="form-gopy">
             <div class="dn">
-                <a href="./Dangnhap.html">Đăng nhập</a>
-                <a href="./Dangky.html">Đăng ký</a>
+                <h1>GÓP Ý</h1>
             </div>  
             <form>
-                <a>Tên tài khoản/Email</a><br>
-                <input type="text" placeholder="Nhập tên tài khoản hoặc Email" required><br>
-                <a>Mật khẩu</a><br>
-                <input type="password" placeholder="Nhập mật khẩu" required><br>
-                <a id="mk">Quên mật khẩu</a>
-                <div class="btn-container">
-                    <button type="submit" class="btn btn-primary">Đăng Ký</button>
-                    <button type="button" class="btn btn-secondary"><a href="/index.html" class="back">Về Trang Chủ</a></button>
+                <a>Họ và Tên (*)</a><br>
+                <input type="text" placeholder="Nhập họ tên đầy đủ" required><br>
+                <a>Thông tin liên hệ (*)</a><br>
+                <input type="text" placeholder="Nhập mật khẩu" required><br>
+                <a>Nội dung</a><br>
+                <textarea class="box" placeholder="Nhập nội dung"></textarea><br>
+                <a id="mk">Tập tin (nếu có)</a>
+                <div class="btn-gopy">
+                    <div class="gui">
+                        <button type="submit"><img src="/Images/paper-plane_8754472.png"><br><a>Gửi</a></button>
+                    </div>
+                    <div class="gui">
+                        <button type="submit"><img src="/Images/undo_7435163.png"><br><a>Làm lại</a></button>
+                    </div>
                 </div>
             </form>
         </div>
@@ -80,16 +85,16 @@
     <div class="footer">
         <div>
             <h4>Dịch Vụ</h4>
-            <p><a href="./Gioithieu.html">Giới thiệu</a></p>
-            <p><a href="./Dieukhoan.html">Điều khoản sử dụng</a></p>
+            <p><a href="Gioithieu.html">Giới thiệu</a></p>
+            <p><a href="Dieukhoan.html">Điều khoản sử dụng</a></p>
         </div>
         <div>
             <h4>Chính Sách</h4>
-            <p><a href="./Doitra.html">Chính sách đổi - trả - hoàn tiền</a></p>
+            <p><a href="Doitra.html">Chính sách đổi - trả - hoàn tiền</a></p>
         </div>
         <div>
             <h4>Thông Tin</h4>
-            <p><a href="./Diadiem.html">Tra cứu địa chỉ</a></p>
+            <p><a href="Diadiem.html">Tra cứu địa chỉ</a></p>
         </div>
         <div class="social">
             <h4>Kết Nối Với Chúng Tôi</h4>
