--- a/Diadiem.html
+++ b/Diadiem.html
@@ -11,20 +11,20 @@
     <header>
         <div id="logo">
             <a href="index.html">
-                <img src="/Images/logo.png" alt="Logo">
+                <img src="logo.png" alt="Logo">
             </a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Tìm Kiếm">
             <button>
-                <img src="/Images/search.png">
+                <img src="search.png">
             </button>
         </div>
         <div class="icons">
-            <div><img src="/Images/shopping.png"><br><a href="Giohang.html">Giỏ Hàng</a></div>
-            <div><img src="/Images/email_2099199.png"><br><a href="Gopy.html">Góp ý</a></div>
-            <div><img src="/Images/human.png"><br><a href="Dangnhap.html">Tài Khoản</a></div>
-            <div><img src="/Images/bell.png"><br><a href="Thongbao.html">Thông Báo</a></div>
+            <div><img src="shopping.png"><br><a href="Giohang.html">Giỏ Hàng</a></div>
+            <div><img src="email_2099199.png"><br><a href="Gopy.html">Góp ý</a></div>
+            <div><img src="human.png"><br><a href="Dangnhap.html">Tài Khoản</a></div>
+            <div><img src="bell.png"><br><a href="Thongbao.html">Thông Báo</a></div>
         </div>
     </header>
     <!--nav-->
@@ -52,7 +52,7 @@
             </ul>
         </div>
         <div class="map">
-            <div><img src="/Images/map.png"><br><a href="Diadiem.html">Hệ Thống Cửa Hàng</a></div>
+            <div><img src="map.png"><br><a href="Diadiem.html">Hệ Thống Cửa Hàng</a></div>
         </div>
         
     </nav>
@@ -99,9 +99,9 @@
         </div>
         <div class="social">
             <h4>Kết Nối Với Chúng Tôi</h4>
-            <img src="/Images/social_15707737.png"></img> <!-- Facebook icon -->
-            <img src="/Images/tiktok_3116491.png"></img> <!-- TikTok icon -->
-            <img src="/Images/social_15707814.png"></img> <!-- YouTube icon -->
+            <img src="social_15707737.png"></img> <!-- Facebook icon -->
+            <img src="tiktok_3116491.png"></img> <!-- TikTok icon -->
+            <img src="social_15707814.png"></img> <!-- YouTube icon -->
         </div>
     </div>
 </body>
