--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <header>
         <div id="logo">
             <a href="index.html">
-                <img src="/Images/logo.png" alt="Logo">
+                <img src="logo.png" alt="Logo">
             </a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Tìm Kiếm">
             <button>
-                <img src="/Images/search.png">
+                <img src="search.png">
             </button>
         </div>
         <div class="icons">
-            <div><img src="/Images/shopping.png"><br><a href="Giohang.html">Giỏ Hàng</a></div>
-            <div><img src="/Images/email_2099199.png"><br><a href="Gopy.html">Góp ý</a></div>
-            <div><img src="/Images/human.png"><br><a href="Dangnhap.html">Tài Khoản</a></div>
-            <div><img src="/Images/bell.png"><br><a href="Thongbao.html">Thông Báo</a></div>
+            <div><img src="shopping.png"><br><a href="Giohang.html">Giỏ Hàng</a></div>
+            <div><img src="email_2099199.png"><br><a href="Gopy.html">Góp ý</a></div>
+            <div><img src="human.png"><br><a href="Dangnhap.html">Tài Khoản</a></div>
+            <div><img src="bell.png"><br><a href="Thongbao.html">Thông Báo</a></div>
         </div>
     </header>
     <!--nav-->
@@ -53,7 +53,7 @@
             </ul>
         </div>
         <div class="map">
-            <div><img src="/Images/map.png"><br><a href="Diadiem.html">Hệ Thống Cửa Hàng</a></div>
+            <div><img src="map.png"><br><a href="Diadiem.html">Hệ Thống Cửa Hàng</a></div>
         </div>
         
     </nav>
@@ -67,26 +67,26 @@
             <div class="slide-container">
                 <div class="slide-stage">
                     <!-- Chèn 36 hình ảnh -->
-                    <div class="slide-image"><a href="#"><img src="/Images/pic11.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic12.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic13.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic14.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic15.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic16.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic17.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic18.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic20.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic21.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic11.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic12.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic13.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic14.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic15.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic16.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic17.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic18.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic20.png"/></a></div>
-                    <div class="slide-image"><a href="#"><img src="/Images/pic21.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic11.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic12.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic13.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic14.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic15.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic16.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic17.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic18.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic20.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic21.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic11.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic12.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic13.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic14.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic15.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic16.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic17.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic18.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic20.png"/></a></div>
+                    <div class="slide-image"><a href="#"><img src="pic21.png"/></a></div>
                 </div>
             </div>
         </aside>
@@ -234,47 +234,47 @@
             <section>
                 <p>Sách mới</p>
                 <div class="sach">
-                    <img class="hinhsach" src="/Images/pic1.png">
+                    <img class="hinhsach" src="pic1.png">
                     <p class="tensach"><a href="Chitietsach.html">Tuyển Tập Thơ Của Lưu Quang Vũ</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
-                    <img class="hinhsach" src="/Images/pic12.png">
+                    <img class="hinhsach" src="pic12.png">
                     <p class="tensach"><a href="Chitietsach.html">Khám Phá Cố Đô Huế </a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
-                    <img class="hinhsach" src="/Images/pic13.png">
+                    <img class="hinhsach" src="pic13.png">
                     <p class="tensach"><a href="Chitietsach.html">Kiến Trúc Hiện Đại </a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
-                    <img class="hinhsach" src="/Images/pic14.png">
+                    <img class="hinhsach" src="pic14.png">
                     <p class="tensach"><a href="Chitietsach.html">Nhật Ký Thức Ăn</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
-                    <img class="hinhsach" src="/Images/pic15.png">
+                    <img class="hinhsach" src="pic15.png">
                     <p class="tensach"><a href="Chitietsach.html">Hãy Nhớ Tên Anh Ấy</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
-                    <img class="hinhsach" src="/Images/pic16.png">
+                    <img class="hinhsach" src="pic16.png">
                     <p class="tensach"><a href="Chitietsach.html">Truyện Ngụ Ngôn</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
-                    <img class="hinhsach" src="/Images/pic17.png">
+                    <img class="hinhsach" src="pic17.png">
                     <p class="tensach"><a href="Chitietsach.html">Nguyễn Công Hoan</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
-                    <img class="hinhsach" src="/Images/pic18.png">
+                    <img class="hinhsach" src="pic18.png">
                     <p class="tensach"><a href="Chitietsach.html">Lương Tướng</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
                 <div class="sach">
-                    <img class="hinhsach" src="/Images/pic20.png">
+                    <img class="hinhsach" src="pic20.png">
                     <p class="tensach"><a href="Chitietsach.html">Nhật Ký Mẹ Chồng</a></p>
                     <p class="dongia">Đơn giá: <span class="gia">50,000 VNĐ</span></p>
                 </div>
@@ -285,14 +285,14 @@
                 <div id="sachbannhieu">
                     <p>SÁCH BÁN NHIỀU</p>
                     <marquee direction="up" scrollamount="3" scrolldelay="100" onMouseMove="stop()" onMouseOut="start()" style="height: 250px;">
-                            <p><a href="#"><img src="/Images/pic11.png">Thủ Thuật Lập Trình Visual Basic 6</a></p>
+                            <p><a href="#"><img src="pic11.png">Thủ Thuật Lập Trình Visual Basic 6</a></p>
                             <p><a href="#">
-                                <img src="/Images/pic12.png">Hướng Dẫn Tự Học Photoshop CS (Photoshop 6.0)
+                                <img src="pic12.png">Hướng Dẫn Tự Học Photoshop CS (Photoshop 6.0)
                             </a></p>
                             <p><a href="#">
-                                <img src="/Images/pic13.png">Căn Bản Về Photoshop CS Tinh Chỉnh Và Xử Lý Màu
+                                <img src="pic13.png">Căn Bản Về Photoshop CS Tinh Chỉnh Và Xử Lý Màu
                             </a></p>
-                            <p><a href="#"><img src="/Images/pic14.png">Tin học Cơ bản</a></p>
+                            <p><a href="#"><img src="pic14.png">Tin học Cơ bản</a></p>
                     </marquee>
                 </div>
                 <!-- Liên kết Website -->
@@ -332,9 +332,9 @@
         </div>
         <div class="social">
             <h4>Kết Nối Với Chúng Tôi</h4>
-            <img src="/Images/social_15707737.png"></img> <!-- Facebook icon -->
-            <img src="/Images/tiktok_3116491.png"></img> <!-- TikTok icon -->
-            <img src="/Images/social_15707814.png"></img> <!-- YouTube icon -->
+            <img src="social_15707737.png"></img> <!-- Facebook icon -->
+            <img src="tiktok_3116491.png"></img> <!-- TikTok icon -->
+            <img src="social_15707814.png"></img> <!-- YouTube icon -->
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
