--- a/Thongbao.html
+++ b/Thongbao.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thông Báo</title>
-    <link rel="stylesheet" type="text/css" href="/Script/CSS/Thongbao.css">
+    <link rel="stylesheet" type="text/css" href="Thongbao.css">
 </head>
 <body>
     <!--header-->
     <header>
         <div id="logo">
-            <a href="/index.html">
-                <img src="/Images/logo.png" alt="Logo">
+            <a href="index.html">
+                <img src="logo.png" alt="Logo">
             </a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Tìm Kiếm">
             <button>
-                <img src="/Images/search.png">
+                <img src="search.png">
             </button>
         </div>
         <div class="icons">
-            <div><img src="/Images/shopping.png"><br><a href="./Giohang.html">Giỏ Hàng</a></div>
-            <div><img src="/Images/email_2099199.png"><br><a href="./Gopy.html">Góp ý</a></div>
-            <div><img src="/Images/human.png"><br><a href="./Dangnhap.html">Tài Khoản</a></div>
-            <div><img src="/Images/bell.png"><br><a href="./Thongbao.html">Thông Báo</a></div>
+            <div><img src="shopping.png"><br><a href="Giohang.html">Giỏ Hàng</a></div>
+            <div><img src="email_2099199.png"><br><a href="Gopy.html">Góp ý</a></div>
+            <div><img src="human.png"><br><a href="Dangnhap.html">Tài Khoản</a></div>
+            <div><img src="bell.png"><br><a href="Thongbao.html">Thông Báo</a></div>
         </div>
     </header>
     <!--nav-->
@@ -52,7 +52,7 @@
             </ul>
         </div>
         <div class="map">
-            <div><img src="/Images/map.png"><br><a href="./Diadiem.html">Hệ Thống Cửa Hàng</a></div>
+            <div><img src="map.png"><br><a href="Diadiem.html">Hệ Thống Cửa Hàng</a></div>
         </div>
         
     </nav>
@@ -65,9 +65,9 @@
                 <span>Thành viên bạc</span>
             </div>
             <ul class="menu">
-                <li><img src="/Images/human.png"><a href="./Trangchu.html">Về trang chủ</a></li>
-                <li><img src="/Images/star_11275137.png"><br><a href="./Gopy.html">Nhận xét của tôi</a></li>
-                <li><img src="/Images/bell.png"><a href="./Thongbao.html">Thông báo</a></li>
+                <li><img src="human.png"><a href="Trangchu.html">Về trang chủ</a></li>
+                <li><img src="star_11275137.png"><br><a href="Gopy.html">Nhận xét của tôi</a></li>
+                <li><img src="bell.png"><a href="Thongbao.html">Thông báo</a></li>
             </ul>
         </div>
         <!-- Main Content -->
@@ -82,22 +82,22 @@
     <div class="footer">
         <div>
             <h4>Dịch Vụ</h4>
-            <p><a href="./Gioithieu.html">Giới thiệu</a></p>
-            <p><a href="./Dieukhoan.html">Điều khoản sử dụng</a></p>
+            <p><a href="Gioithieu.html">Giới thiệu</a></p>
+            <p><a href="Dieukhoan.html">Điều khoản sử dụng</a></p>
         </div>
         <div>
             <h4>Chính Sách</h4>
-            <p><a href="./Doitra.html">Chính sách đổi - trả - hoàn tiền</a></p>
+            <p><a href="Doitra.html">Chính sách đổi - trả - hoàn tiền</a></p>
         </div>
         <div>
             <h4>Thông Tin</h4>
-            <p><a href="./Diadiem.html">Tra cứu địa chỉ</a></p>
+            <p><a href="Diadiem.html">Tra cứu địa chỉ</a></p>
         </div>
         <div class="social">
             <h4>Kết Nối Với Chúng Tôi</h4>
-            <img src="/Images/social_15707737.png"></img> <!-- Facebook icon -->
-            <img src="/Images/tiktok_3116491.png"></img> <!-- TikTok icon -->
-            <img src="/Images/social_15707814.png"></img> <!-- YouTube icon -->
+            <img src="social_15707737.png"></img> <!-- Facebook icon -->
+            <img src="tiktok_3116491.png"></img> <!-- TikTok icon -->
+            <img src="social_15707814.png"></img> <!-- YouTube icon -->
         </div>
     </div>
 </body>
